--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,5 +15,8 @@
     "mysql2": "^1.6.5",
     "pug": "^2.0.4",
     "sequelize": "^5.8.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
